fix: when getting a table,  return a list of rows instead of a list of cells